--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,21 @@
 /* Add CSS Styling */
+
+.paragraph {
+    background-color: rgb(255, 150, 150);
+    font-family: "Verdana", "DejaVu Sans", "sans-serif";
+}
+
+.paragraph.special {
+    font-size: 24px;
+}
+
+#second {
+    color: rgb(0,0,255);
+    font-size: 36px;
+}
+
+#fourth {
+    font-weight: bold;
+    font-size: 24px;
+    background-color: rgb(150,255,150);
+}
