--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -7,21 +7,40 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 12px;
+  padding-top: 16px;
 }
 
 .title {
   background: #e3f4ff;
+  padding: 12px;
 }
 
 .content {
   background: #e3f4ff;
+  margin-bottom: 16px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-left: 8px;
+  padding-right: 8px;
 }
 
 .button-container {
   background: #e3f4ff;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-left: 8px;
+  padding-right: 8px;
+  text-align: center;
+  align-content: center;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  padding: 10px;
+  display: block;
+  text-align: center;
+  align-content: center;
+  margin: auto;
 }
