--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,6 +20,11 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  gap: 15px;
+  padding: 16px;
 }
 
 .icon {
@@ -33,6 +38,19 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 3px 20px;
+  margin: 0px;
+}
+
+.header {
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
 }
 
 .close-button {
@@ -47,7 +65,14 @@ body {
   align-items: center;
   justify-content: center;
   border: 1px solid #eee;
-  padding: 0;
+  padding: 3px 10px;
+  margin: 0px;
+}
+
+.top {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 button {
